# perf-sentinel

./: .env.example  .gitignore  README.md  pyproject.toml
src/bookstore/: main.py
src/perf_sentinel/: config.py  db.py  ingest.py  main.py
src/perf_sentinel/templates/: base.html  index.html  run_detail.html
tests/: conftest.py  test_bookstore_perf.py
